java-cron-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-cron
  labels:
    app: java-cron
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-cron
  template:
    metadata:
      labels:
        app: java-cron
    spec:
      containers:
      - name: java-cron
        image: sagargslab/java-cron-app:1.3
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: java-cron-service
spec:
  selector:
    app: java-cron
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8081
      targetPort: 8081
