java-web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: java-web
  labels:
    app: java-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: java-web
  template:
    metadata:
      labels:
        app: java-web
    spec:      
      containers:
      - name: java-web
        imagePullPolicy: Always
        image: swapnildharane/java-web-app:latest
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: java-web-service
spec:
  selector:
    app: java-web
  type: NodePort
  ports:
    - protocol: TCP
      port: 8080
      nodePort: 30000
